# privilege-check

./: .appveyor.yml  .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  error.h  handle.hpp  main.cpp  main.rc  os.h  process.h  resource_ids.h  sid.h  token.h
.appveyor/: build.ps1
.github/workflows/: ci.yml
src/: cmd_line.hpp  error.cpp  error.hpp  handle.hpp  main.cpp  main.rc  os.cpp  os.hpp  process.cpp  process.hpp  resource.cpp  resource.hpp  resource_ids.h  sid.cpp  sid.hpp  string.hpp  token.cpp  token.hpp
